made two category columns on mobile. resolves #24

--- a/public/src/style.css
+++ b/public/src/style.css
@@ -824,3 +824,12 @@ h1 .icon, h2 .icon, h3 .icon {
   text-align: center;
   margin-top: 10px;
 }
+
+@media screen and (max-width: 700px) {
+  #categoryContainer > a {
+    min-height: 200px;
+    min-width: 200px;
+    max-width: 205px;
+    flex: 0 0 21%;
+  }
+}
